# Conformal-Prediction-with-ECG

./: .gitignore  README.md  TRAINING_GUIDE.md  download_data.py  main.py  pyproject.toml  requirements.txt  train.py
config/: config.yaml
config/classification/: ptbdb_augmented_mihealthy.yaml  ptbdb_augmented_subtype.yaml  ptbdb_clean_mihealthy.yaml  ptbdb_clean_subtype.yaml  ptbdb_default_mihealthy.yaml  ptbdb_default_subtype.yaml  ptbxl_augmented_mihealthy.yaml  ptbxl_augmented_subtype.yaml  ptbxl_clean_mihealthy.yaml  ptbxl_clean_subtype.yaml  ptbxl_default_mihealthy.yaml  ptbxl_default_subtype.yaml
config/model/: ecgtransform.yaml  mcdann.yaml  mffcnn.yaml  unet3pcgm.yaml
config/segmentation/: default.yaml
config/trainer/: default.yaml
src/data/: __init__.py  classification.py  get_data.py  segmentation.py
src/model/: ECGTransForm.py  MCDANN.py  UNet1D.py  __init__.py
src/utils/: denoise.py  loss.py  transform.py
