[project]
name = "conformal-prediction-with-ecg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "absl-py==2.3.1",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "albucore==0.0.24",
    "albumentations==2.0.8",
    "alembic==1.17.2",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "anyio==4.12.0",
    "asttokens==3.0.1",
    "astunparse==1.6.3",
    "async-timeout==5.0.1",
    "attrs==25.4.0",
    "autopage==0.5.2",
    "backports-strenum==1.3.1",
    "bidict==0.23.1",
    "biosppy==2.2.4",
    "certifi==2025.11.12",
    "cffi==2.0.0",
    "cfgv==3.5.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "cliff==4.13.1",
    "cmaes==0.12.0",
    "cmd2==3.1.0",
    "colorlog==6.10.1",
    "comm==0.2.3",
    "conda-pack==0.9.1",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "debugpy==1.8.19",
    "decorator==5.2.1",
    "distlib==0.4.0",
    "ecgmentations>=0.0.9",
    "exceptiongroup==1.3.1",
    "executing==2.2.1",
    "filelock==3.20.1",
    "fire==0.7.1",
    "flatbuffers==25.12.19",
    "fonttools==4.61.1",
    "frozenlist==1.8.0",
    "fsspec==2025.12.0",
    "gast==0.7.0",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "google-pasta==0.2.0",
    "grad-cam==1.3.1",
    "greenlet==3.3.0",
    "grpcio==1.76.0",
    "h11==0.16.0",
    "h5py==3.15.1",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.2.3",
    "hydra-colorlog==1.2.0",
    "hydra-core==1.3.1",
    "hydra-optuna-sweeper==1.2.0",
    "identify==2.6.15",
    "idna==3.11",
    "iniconfig==2.3.0",
    "ipykernel==7.1.0",
    "ipython==8.37.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "kaggle>=2.1.2",
    "keras==3.12.0",
    "kiwisolver==1.4.9",
    "libclang==18.1.1",
    "lightning==2.6.0",
    "lightning-utilities==0.15.2",
    "mako==1.3.10",
    "markdown==3.10",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "ml-dtypes==0.5.4",
    "mock==5.2.0",
    "mpmath==1.3.0",
    "multidict==6.7.0",
    "namex==0.1.0",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "nodeenv==1.10.0",
    "numpy==2.2.6",
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-ml-py==13.590.44",
    "nvidia-nccl-cu12==2.27.5",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvshmem-cu12==3.3.20",
    "nvidia-nvtx-cu12==12.8.90",
    "omegaconf==2.3.0",
    "opencv-python==4.13.0.90",
    "opencv-python-headless==4.12.0.88",
    "opt-einsum==3.4.0",
    "optree==0.18.0",
    "optuna==2.10.1",
    "packaging==26.0",
    "pandas==2.3.3",
    "parso==0.8.5",
    "peakutils==1.3.5",
    "pexpect==4.9.0",
    "pickleshare==0.7.5",
    "pillow==12.0.0",
    "pip==22.1",
    "platformdirs==4.5.1",
    "pluggy==1.6.0",
    "pre-commit==4.5.1",
    "prettytable==3.17.0",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "protobuf==6.33.2",
    "psutil==7.2.1",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "pynvml==13.0.1",
    "pyparsing==3.3.1",
    "pyperclip==1.11.0",
    "pyrootutils==1.0.4",
    "pytest==9.0.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "pytorch-lightning==2.6.0",
    "pytz==2025.2",
    "pywavelets==1.8.0",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "requests==2.32.5",
    "rich==14.2.0",
    "rich-argparse==1.7.2",
    "safetensors==0.7.0",
    "scikit-learn==1.7.2",
    "scipy==1.15.3",
    "seaborn==0.13.2",
    "segmentation-models-pytorch==0.5.0",
    "sentry-sdk==2.48.0",
    "setuptools==80.9.0",
    "sh==2.2.2",
    "shellingham==1.5.4",
    "shortuuid==1.0.13",
    "simsimd==6.5.12",
    "six==1.17.0",
    "smmap==5.0.2",
    "soundfile==0.13.1",
    "sqlalchemy==2.0.45",
    "stack-data==0.6.3",
    "stevedore==5.6.0",
    "stringzilla==4.6.0",
    "sympy==1.14.0",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "tensorboardx==2.6.4",
    "tensorflow==2.20.0",
    "termcolor==3.2.0",
    "threadpoolctl==3.6.0",
    "timm==1.0.22",
    "tomli==2.3.0",
    "torch>=2.9.1",
    "torchmetrics>=0.11.0",
    "torchvision==0.24.1",
    "tornado==6.5.4",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "triton==3.5.1",
    "ttach==0.0.3",
    "typer-slim==0.21.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "urllib3==2.6.2",
    "virtualenv==20.35.4",
    "wandb==0.23.1",
    "wcwidth==0.2.14",
    "werkzeug==3.1.4",
    "wfdb==4.3.0",
    "wget==3.2",
    "wheel==0.45.1",
    "wrapt==2.0.1",
    "yarl==1.22.0",
]
